# fastapi-dataclass-battery

./: README.md  pyproject.toml  requirements.txt
examples/dataclasses/: compare_instance_size.py  compare_time_and_memory_for_bunch_of_instances.py
examples/fastapi/: data.json  non_patched_app.py  patched_app.py
fastapi_dataclass_battery/: dataclasses.py  fastapi.py
tests/: test_dataclass.py
